Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Nguyên nhân nhiều tiếng nổ vang trời Hà Nội lúc rạng sáng",
+    "content": "Vào rạng sáng ngày 11-3, nhiều người dân ở Hà Nội nghe thấy tiếng nổ lớn do một bãi phế liệu gần đại lộ Thăng Long bốc cháy. Hỏa hoạn này gây ra cột khói đen cao hàng chục mét và tiếng nổ từ các bình áp lực trong bãi phế liệu. Cảnh sát phòng cháy chữa cháy đã được điều động đến hiện trường để xử lý vụ việc, và may mắn không có thương vong nào xảy ra.",
+    "link": "https://tuoitre.vn/nguyen-nhan-nhieu-tieng-no-vang-troi-ha-noi-luc-rang-sang-20250311063142163.htm",
+    "cat": "thoi-su",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nguyên nhân nào gây ra nhiều tiếng nổ vang trời ở Hà Nội sáng 11-3?",
+    "answers": [
+      {
+        "text": "Hỏa hoạn tại bãi phế liệu gần đại lộ Thăng Long.",
+        "correct": true
+      },
+      {
+        "text": "Sự cố kỹ thuật tại một nhà máy.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông trên đường cao tốc.",
+        "correct": false
+      },
+      {
+        "text": "Một buổi lễ bắn pháo hoa.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Gen Z theo nghề xiếc: Cháy tóc và lông mày như cơm bữa, liều mạng trên cao",
     "content": "Molly Trần, 22 tuổi, là một nghệ sĩ xiếc nổi bật tại TPHCM, đã bắt đầu hành trình theo đuổi nghệ thuật từ khi mới 16 tuổi. Cô đã trải qua nhiều khó khăn, bao gồm cả việc luyện tập vất vả và phải xa gia đình để theo học tại Trung cấp Nghệ thuật Xiếc và Tạp kỹ Việt Nam. Nghề xiếc không chỉ đòi hỏi kỹ thuật cao mà còn mang lại nhiều rủi ro, như bị bỏng tóc và lông mày trong quá trình luyện tập. Dù gặp nhiều thử thách, Molly vẫn kiên trì theo đuổi đam mê của mình và không ngừng nỗ lực để phát triển sự nghiệp.",
     "link": "https://dantri.com.vn/giai-tri/gen-z-theo-nghe-xiec-chay-toc-va-long-may-nhu-com-bua-lieu-mang-tren-cao-20250309110916874.htm",
@@ -237,6 +264,33 @@
     ]
   },
   {
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "answers": [
+      {
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ di chuyển.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn khi lái xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ chọn sếp",
     "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
     "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
@@ -263,33 +317,6 @@
       },
       {
         "text": "Vì họ muốn có thời gian làm việc thoải mái.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
-    "answers": [
-      {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ di chuyển.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm tiếng ồn khi lái xe.",
         "correct": false
       }
     ]
@@ -1814,28 +1841,28 @@
     ]
   },
   {
-    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
-    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
+    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
+    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
+    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
     "answers": [
       {
-        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
+        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
         "correct": true
       },
       {
-        "text": "Không, chỉ là một bệnh nhẹ.",
+        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
         "correct": false
       },
       {
-        "text": "Có nhưng không gây biến chứng nặng.",
+        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
         "correct": false
       },
       {
-        "text": "Có thể tự khỏi mà không cần điều trị.",
+        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
         "correct": false
       }
     ]
@@ -1868,28 +1895,28 @@
     ]
   },
   {
-    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
-    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
-    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
+    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
+    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
     "answers": [
       {
-        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
+        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
         "correct": true
       },
       {
-        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
+        "text": "Không, chỉ là một bệnh nhẹ.",
         "correct": false
       },
       {
-        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
+        "text": "Có nhưng không gây biến chứng nặng.",
         "correct": false
       },
       {
-        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
+        "text": "Có thể tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
