--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,33 @@
     ]
   },
   {
+    "title": "Đường huyết mạch phía đông TP HCM 15 năm chưa mở rộng xong",
+    "content": "Dự án mở rộng xa lộ Hà Nội tại TP HCM kéo dài 15 năm vẫn chưa hoàn thành do vướng mặt bằng. Dự án này có chiều dài 15,7 km và được khởi công từ năm 2010 với kinh phí hơn 4.900 tỷ đồng. Mặc dù đã đạt hơn 91% tiến độ, phần mở rộng đến nút giao Tân Vạn vẫn đang tắc nghẽn do chưa giải phóng mặt bằng cho khoảng 30 hộ dân tại khu vực này. Việc chậm trễ trong dự án đã tạo ra tình trạng ùn tắc giao thông nghiêm trọng tại khu vực cửa ngõ phía Đông thành phố.",
+    "link": "https://vnexpress.net/duong-huyet-mach-phia-dong-tp-hcm-15-nam-chua-mo-rong-xong-4859341.html",
+    "cat": "thoi-su",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao dự án mở rộng xa lộ Hà Nội tại TP HCM chưa hoàn thành?",
+    "answers": [
+      {
+        "text": "Vướng mặt bằng chưa giải phóng xong.",
+        "correct": true
+      },
+      {
+        "text": "Thiếu kinh phí đầu tư.",
+        "correct": false
+      },
+      {
+        "text": "Công ty thi công không đủ năng lực.",
+        "correct": false
+      },
+      {
+        "text": "Thời tiết không thuận lợi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nguyên nhân nhiều tiếng nổ vang trời Hà Nội lúc rạng sáng",
     "content": "Vào rạng sáng ngày 11-3, nhiều người dân ở Hà Nội nghe thấy tiếng nổ lớn do một bãi phế liệu gần đại lộ Thăng Long bốc cháy. Hỏa hoạn này gây ra cột khói đen cao hàng chục mét và tiếng nổ từ các bình áp lực trong bãi phế liệu. Cảnh sát phòng cháy chữa cháy đã được điều động đến hiện trường để xử lý vụ việc, và may mắn không có thương vong nào xảy ra.",
     "link": "https://tuoitre.vn/nguyen-nhan-nhieu-tieng-no-vang-troi-ha-noi-luc-rang-sang-20250311063142163.htm",
@@ -614,28 +641,32 @@
     ]
   },
   {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
+    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
+    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
+    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
+    "cat": "thoi-su",
+    "positivity": 8,
     "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
     "answers": [
       {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "text": "40 tầng",
         "correct": true
       },
       {
-        "text": "Để tiết kiệm nhiên liệu.",
+        "text": "30 tầng",
         "correct": false
       },
       {
-        "text": "Để tăng tốc độ di chuyển.",
+        "text": "24 tầng",
         "correct": false
       },
       {
-        "text": "Để giảm tiếng ồn khi lái xe.",
+        "text": "20 tầng",
+        "correct": false
+      },
+      {
+        "text": "50 tầng",
         "correct": false
       }
     ]
@@ -667,6 +698,33 @@
       },
       {
         "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "answers": [
+      {
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ di chuyển.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn khi lái xe.",
         "correct": false
       }
     ]
@@ -985,6 +1043,37 @@
     ]
   },
   {
+    "title": "Cả nước dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình cho biết cả nước dự kiến sẽ giảm số lượng đơn vị hành chính cấp xã từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc này dự kiến sẽ hoàn thành vào tháng 6 tới, với các tiêu chí sẽ được Trung ương ban hành để các địa phương lập phương án sắp xếp. Chất lượng cán bộ cấp xã cũng sẽ được nâng cao, nhằm tăng cường hiệu quả quản lý.",
+    "link": "https://vnexpress.net/ca-nuoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Cả nước dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "5.000",
+        "correct": false
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "7.500",
+        "correct": false
+      },
+      {
+        "text": "3.500",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
     "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
     "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
@@ -1155,33 +1244,6 @@
     ]
   },
   {
-    "title": "'Dừng bổ nhiệm cán bộ đến khi hoàn thành sáp nhập tỉnh'",
-    "content": "Bộ Chính trị Việt Nam đã ban hành kết luận 128 yêu cầu tạm dừng mọi hoạt động tuyển dụng, bổ nhiệm và giới thiệu cán bộ ứng cử cho các chức danh lãnh đạo quản lý từ ngày 7/3 cho đến khi hoàn thành sáp nhập tỉnh và xã, cũng như bỏ cấp huyện. Đây là một phần của quá trình sắp xếp tổ chức bộ máy nhằm tinh gọn và hiệu quả hơn trong hoạt động của các cơ quan nhà nước. Các trường hợp đặc biệt vẫn có thể được xem xét nhưng cần phải báo cáo và xin ý kiến từ Bộ Chính trị.",
-    "link": "https://vnexpress.net/dung-bo-nhiem-can-bo-den-khi-hoan-thanh-sap-nhap-tinh-4859332.html",
-    "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao Bộ Chính trị yêu cầu dừng bổ nhiệm cán bộ?",
-    "answers": [
-      {
-        "text": "Để hoàn thành sáp nhập tỉnh và xã.",
-        "correct": true
-      },
-      {
-        "text": "Vì các cơ quan không còn chức năng.",
-        "correct": false
-      },
-      {
-        "text": "Để cải cách chính sách nhân sự.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm số lượng cán bộ trong bộ máy.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tái bản lần thứ 5 \"Học cách học\": Cẩm nang giúp mọi người học tập hiệu quả",
     "content": "Cuốn sách \"Học cách học\" của Barbara Oakley và Terrence Sejnowski đã được tái bản lần thứ 5, khẳng định giá trị và sức hút của nó trong việc giúp người học tối ưu hóa phương pháp học tập. Kể từ khi ra mắt tại Việt Nam vào năm 2019, cuốn sách đã giúp nhiều độc giả cải thiện kỹ năng tự học và ứng dụng các phương pháp học tập hiệu quả. Nội dung sách dựa trên khoa học thần kinh và tâm lý học nhận thức, cung cấp các kỹ thuật học tập hấp dẫn và dễ áp dụng, từ đó phát triển tư duy sáng tạo cho học sinh và giáo viên.",
     "link": "https://dantri.com.vn/giai-tri/tai-ban-lan-thu-5-hoc-cach-hoc-cam-nang-giup-moi-nguoi-hoc-tap-hieu-qua-20250310205129757.htm",
@@ -1294,6 +1356,33 @@
     ]
   },
   {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -1320,33 +1409,6 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -1410,33 +1472,6 @@
     ]
   },
   {
-    "title": "Vì sao gọi là bệnh ho gà?",
-    "content": "Bệnh ho gà là một bệnh nhiễm trùng đường hô hấp do vi khuẩn Bordetella Pertussis gây ra, thường gặp ở trẻ nhỏ với đặc trưng là các cơn ho kéo dài kèm theo tiếng rít giống như tiếng gà gáy. Bệnh có thể gây ra nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời, bao gồm viêm phổi và có thể dẫn đến tử vong. Để phòng ngừa ho gà, tiêm vaccine là biện pháp hiệu quả nhất, với nhiều loại vaccine khác nhau phù hợp cho trẻ em và người lớn.",
-    "link": "https://vnexpress.net/vi-sao-goi-la-benh-ho-ga-4859217.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Vì sao ho gà lại có tên gọi như vậy?",
-    "answers": [
-      {
-        "text": "Vì bệnh gây ra những cơn ho kéo dài với tiếng rít giống như tiếng gà gáy.",
-        "correct": true
-      },
-      {
-        "text": "Bệnh này do virus gây ra.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh chỉ xảy ra ở người lớn.",
-        "correct": false
-      },
-      {
-        "text": "Ho gà là tên một loại thuốc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Uống gì giảm nguy cơ sỏi thận?",
     "content": "Để giảm nguy cơ sỏi thận, việc uống đủ nước, khoảng hai lít mỗi ngày, là rất quan trọng. Ngoài ra, việc tiêu thụ cà phê vừa phải, trà thảo mộc và các loại nước uống không chứa calo cũng giúp giảm nguy cơ sỏi thận. Cà phê có thể giảm nguy cơ đến 40% nếu tăng lượng tiêu thụ, trong khi trà xanh và sinh tố ít đường cũng có lợi cho sức khỏe thận. Tuy nhiên, cần lưu ý lượng đường và các chất trong nước ép trái cây để tránh tác động xấu đến sức khỏe.",
     "link": "https://vnexpress.net/uong-gi-giam-nguy-co-soi-than-4859161.html",
@@ -1463,6 +1498,33 @@
       },
       {
         "text": "Uống nước trái cây có đường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao gọi là bệnh ho gà?",
+    "content": "Bệnh ho gà là một bệnh nhiễm trùng đường hô hấp do vi khuẩn Bordetella Pertussis gây ra, thường gặp ở trẻ nhỏ với đặc trưng là các cơn ho kéo dài kèm theo tiếng rít giống như tiếng gà gáy. Bệnh có thể gây ra nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời, bao gồm viêm phổi và có thể dẫn đến tử vong. Để phòng ngừa ho gà, tiêm vaccine là biện pháp hiệu quả nhất, với nhiều loại vaccine khác nhau phù hợp cho trẻ em và người lớn.",
+    "link": "https://vnexpress.net/vi-sao-goi-la-benh-ho-ga-4859217.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Vì sao ho gà lại có tên gọi như vậy?",
+    "answers": [
+      {
+        "text": "Vì bệnh gây ra những cơn ho kéo dài với tiếng rít giống như tiếng gà gáy.",
+        "correct": true
+      },
+      {
+        "text": "Bệnh này do virus gây ra.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh chỉ xảy ra ở người lớn.",
+        "correct": false
+      },
+      {
+        "text": "Ho gà là tên một loại thuốc.",
         "correct": false
       }
     ]
@@ -3010,6 +3072,33 @@
     ]
   },
   {
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "answers": [
+      {
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không thích đi xe.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ yếu sinh lý.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -3036,33 +3125,6 @@
       },
       {
         "text": "4,0%/năm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
-    "answers": [
-      {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
-        "correct": true
-      },
-      {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không thích đi xe.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
